crates/ridge-resolve/tests/snapshots/workspace__t14_acme_happy.snap
---
source: crates/ridge-resolve/tests/workspace.rs
expression: snap
---
WorkspaceSnapshot {
    module_fqns: [
        "acme.domain.RegisterUser",
        "acme.infra.Postgres",
    ],
    errors: [],
    forbid_violations: [],
    import_summary: {
        "acme.domain.RegisterUser": [
            "<bare> -> BuiltinStdlib(0)",
            "<bare> -> BuiltinStdlib(17)",
            "<bare> -> BuiltinStdlib(7)",
            "<bare> -> BuiltinStdlib(8)",
            "Pg -> WorkspaceModule(acme.infra.Postgres)",
        ],
        "acme.infra.Postgres": [
            "<bare> -> BuiltinStdlib(0)",
            "<bare> -> BuiltinStdlib(17)",
            "<bare> -> BuiltinStdlib(7)",
            "<bare> -> BuiltinStdlib(8)",
        ],
    },
}
